# ParseTree-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: ParallelTreeBankTest.c  ParseTreeTest.c  SymbolTest.c  TreeBankTest.c
src/: CMakeLists.txt  ConstituentSpan.c  ConstituentSpan.h  NodeCollector.c  NodeCollector.h  ParallelTreeBank.c  ParallelTreeBank.h  ParseNode.c  ParseNode.h  ParseTree.c  ParseTree.h  SearchDirectionType.h  Symbol.c  Symbol.h  TreeBank.c  TreeBank.h
src/NodeCondition/: IsEnglishLeaf.c  IsEnglishLeaf.h  IsLeaf.c  IsLeaf.h
