cmake_minimum_required(VERSION 3.23)
project(ParseTree)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_FLAGS "-O3")

find_package(dictionary_c REQUIRED)

add_library(ParseTree src/ParseNode.c src/ParseNode.h src/Symbol.c src/Symbol.h src/SearchDirectionType.h src/NodeCondition/IsLeaf.c src/NodeCondition/IsLeaf.h src/NodeCondition/IsEnglishLeaf.c src/NodeCondition/IsEnglishLeaf.h src/ConstituentSpan.c src/ConstituentSpan.h src/NodeCollector.c src/NodeCollector.h src/ParseTree.c src/ParseTree.h src/TreeBank.c src/TreeBank.h src/ParallelTreeBank.c src/ParallelTreeBank.h)
target_link_libraries(ParseTree dictionary_c::dictionary_c)
add_executable(SymbolTest src/ParseNode.c src/ParseNode.h src/Symbol.c src/Symbol.h src/ConstituentSpan.c src/ConstituentSpan.h src/SearchDirectionType.h Test/SymbolTest.c)
target_link_libraries(SymbolTest dictionary_c::dictionary_c)
add_executable(ParseTreeTest src/ParseNode.c src/ParseNode.h src/Symbol.c src/Symbol.h src/SearchDirectionType.h src/NodeCondition/IsLeaf.c src/NodeCondition/IsLeaf.h src/NodeCondition/IsEnglishLeaf.c src/NodeCondition/IsEnglishLeaf.h src/ConstituentSpan.c src/ConstituentSpan.h src/NodeCollector.c src/NodeCollector.h src/ParseTree.c src/ParseTree.h Test/ParseTreeTest.c)
target_link_libraries(ParseTreeTest dictionary_c::dictionary_c)
add_executable(TreeBankTest src/ParseNode.c src/ParseNode.h src/Symbol.c src/Symbol.h src/SearchDirectionType.h src/NodeCondition/IsLeaf.c src/NodeCondition/IsLeaf.h src/NodeCondition/IsEnglishLeaf.c src/NodeCondition/IsEnglishLeaf.h src/ConstituentSpan.c src/ConstituentSpan.h src/NodeCollector.c src/NodeCollector.h src/ParseTree.c src/ParseTree.h src/TreeBank.c src/TreeBank.h Test/TreeBankTest.c)
target_link_libraries(TreeBankTest dictionary_c::dictionary_c)
add_executable(ParallelTreeBankTest src/ParseNode.c src/ParseNode.h src/Symbol.c src/Symbol.h src/SearchDirectionType.h src/NodeCondition/IsLeaf.c src/NodeCondition/IsLeaf.h src/NodeCondition/IsEnglishLeaf.c src/NodeCondition/IsEnglishLeaf.h src/ConstituentSpan.c src/ConstituentSpan.h src/NodeCollector.c src/NodeCollector.h src/ParseTree.c src/ParseTree.h src/TreeBank.c src/TreeBank.h src/ParallelTreeBank.c src/ParallelTreeBank.h Test/ParallelTreeBankTest.c)
target_link_libraries(ParallelTreeBankTest dictionary_c::dictionary_c)
